--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -5,6 +5,7 @@
 @import 'tabs';
 @import 'external_link';
 @import 'dark-adjustments';
+@import 'landing';
 @import 'td/color-adjustments-dark';
 @import 'td/code-dark';
 @import 'td/gcs-search-dark';
