--- a/assets/scss/_landing.scss
+++ b/assets/scss/_landing.scss
@@ -48,7 +48,9 @@
       font-size: $font-size-base;
       border-radius: 2rem;
       border: 2px solid $border-color;
-      transition: border-color 0.2s ease, box-shadow 0.2s ease;
+      transition:
+        border-color 0.2s ease,
+        box-shadow 0.2s ease;
 
       &:focus {
         border-color: $primary;
@@ -612,4 +614,3 @@
     }
   }
 }
-
