Fix GFM alert rendering

--- a/layouts/_markup/render-blockquote-alert.html
+++ b/layouts/_markup/render-blockquote-alert.html
@@ -7,7 +7,7 @@
 -}}
 
 <div class="alert
-    {{- with index $colors .AlertType -}} alert-{{ . }}
+    {{- with index $colors .AlertType }} alert-{{ . }}
   {{- end }}">
   {{ $title := or
     .AlertTitle
