Improve GFM alert support with md in title, and more
- Migrate i18n en and pt files from TOML to YAML format
- Drop empty zh placeholder i18n file

--- a/layouts/_markup/render-blockquote-alert.html
+++ b/layouts/_markup/render-blockquote-alert.html
@@ -6,22 +6,20 @@
     "warning" "warning"
 -}}
 
-<div class="alert
-    {{- with index $colors .AlertType }} alert-{{ . }}
-  {{- end }}" role="alert">
-  {{ $title := or
-    .AlertTitle
-    (and .AlertType
-      (or
-        (and (ne site.Language.Lang "en") (i18n .AlertType))
-        (title .AlertType)
-      )
-    )
-  -}}
-  {{ with $title -}}
-    <div class="h4 alert-heading" role="heading">
-        {{- . | safeHTML -}}
-    </div>
-  {{- end }}
-  {{ .Text }}
+{{ $alertClass := index $colors .AlertType | default "primary" -}}
+{{ $title := or
+  .AlertTitle
+  (and
+    .AlertType
+    (or (i18n .AlertType) (title .AlertType))
+  )
+-}}
+
+<div class="alert alert-{{ $alertClass }}" role="alert">
+{{ with $title -}}
+  <div class="h4 alert-heading" role="heading">
+    {{- . -}}
+  </div>
+{{- end }}
+{{ .Text }}
 </div>
