--- a/layouts/_shortcodes/blocks/signal.html
+++ b/layouts/_shortcodes/blocks/signal.html
@@ -1,10 +1,15 @@
 {{- $name := .Get "name" -}}
 {{- $icon := .Get "icon" -}}
+{{- $image := .Get "image" -}}
 {{- $url := .Get "url" -}}
 
 <a href="{{ $url }}" class="signal-card">
   <div class="signal-card__icon">
-    <i class="fas fa-{{ $icon }}"></i>
+    {{- if $image -}}
+      <img src="{{ $image }}" alt="{{ $name }}" class="signal-card__img">
+    {{- else -}}
+      <i class="fas fa-{{ $icon }}"></i>
+    {{- end -}}
   </div>
   <div class="signal-card__name">{{ $name }}</div>
   {{ with .Inner }}
