--- a/layouts/_shortcodes/blocks/main-features.html
+++ b/layouts/_shortcodes/blocks/main-features.html
@@ -1,12 +1,6 @@
-{{- $color := .Get "color" | default "light" -}}
-
 <div><a id="td-block-main-features-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
-<section class="row td-box td-box--{{ $color }} main-features-section">
-  <div class="col-12">
-    <div class="container">
-      <div class="main-features">
-        {{ .Inner }}
-      </div>
-    </div>
+<section class="main-features-section">
+  <div class="main-features">
+    {{ .Inner }}
   </div>
 </section>
