--- a/layouts/_shortcodes/blocks/otel-feature.html
+++ b/layouts/_shortcodes/blocks/otel-feature.html
@@ -1,7 +1,7 @@
-{{- $icon := .Get "icon" -}}
-{{- $image := .Get "image" -}}
-{{- $title := .Get "title" -}}
-{{- $url := .Get "url" -}}
+{{ $icon := .Get "icon" -}}
+{{ $image := .Get "image" -}}
+{{ $title := .Get "title" -}}
+{{ $url := .Get "url" -}}
 
 <div class="otel-feature">
   {{- if $image -}}
