--- a/layouts/_shortcodes/blocks/signal.html
+++ b/layouts/_shortcodes/blocks/signal.html
@@ -1,7 +1,7 @@
-{{- $name := .Get "name" -}}
-{{- $icon := .Get "icon" -}}
-{{- $image := .Get "image" -}}
-{{- $url := .Get "url" -}}
+{{ $name := .Get "name" -}}
+{{ $icon := .Get "icon" -}}
+{{ $image := .Get "image" -}}
+{{ $url := .Get "url" -}}
 
 <a href="{{ $url }}" class="signal-card">
   <div class="signal-card__icon">
