--- a/layouts/_shortcodes/blocks/signals-showcase.html
+++ b/layouts/_shortcodes/blocks/signals-showcase.html
@@ -1,4 +1,4 @@
-{{- $title := .Get "title" | default "Observability Signals" -}}
+{{ $title := .Get "title" | default "Observability Signals" -}}
 
 <div><a id="td-block-signals-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
 <section class="row signals-showcase-section">
