--- a/layouts/_shortcodes/blocks/stat.html
+++ b/layouts/_shortcodes/blocks/stat.html
@@ -1,7 +1,7 @@
-{{- $type := .Get "type" -}}
-{{- $label := .Get "label" -}}
-{{- $url := .Get "url" -}}
-{{- $number := .Get "number" -}}
+{{ $type := .Get "type" -}}
+{{ $label := .Get "label" -}}
+{{ $url := .Get "url" -}}
+{{ $number := .Get "number" -}}
 
 {{- if $type -}}
   {{- if eq $type "languages" -}}
