--- a/layouts/_shortcodes/blocks/adopters-showcase.html
+++ b/layouts/_shortcodes/blocks/adopters-showcase.html
@@ -1,14 +1,14 @@
-{{- $color := .Get "color" | default "light" -}}
-{{- $title := .Get "title" | default "Trusted by" -}}
-{{- $limit := .Get "limit" | default 12 -}}
-{{- $showCta := .Get "showCta" | default true -}}
-{{- $ctaText := .Get "ctaText" | default "View all adopters" -}}
-{{- $ctaUrl := .Get "ctaUrl" | default "/ecosystem/adopters/" -}}
+{{ $color := .Get "color" | default "light" -}}
+{{ $title := .Get "title" | default "Trusted by" -}}
+{{ $limit := .Get "limit" | default 12 -}}
+{{ $showCta := .Get "showCta" | default true -}}
+{{ $ctaText := .Get "ctaText" | default "View all adopters" -}}
+{{ $ctaUrl := .Get "ctaUrl" | default "/ecosystem/adopters/" -}}
 
-{{- $featuredAdopters := site.Data.ecosystem.featured_adopters -}}
-{{- $regularAdopters := site.Data.ecosystem.adopters -}}
-{{- $adopters := $featuredAdopters | default $regularAdopters -}}
-{{- $sortedAdopters := sort $adopters "name" -}}
+{{ $featuredAdopters := site.Data.ecosystem.featured_adopters -}}
+{{ $regularAdopters := site.Data.ecosystem.adopters -}}
+{{ $adopters := $featuredAdopters | default $regularAdopters -}}
+{{ $sortedAdopters := sort $adopters "name" -}}
 
 <div><a id="td-block-adopters-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
 <section class="row td-box td-box--{{ $color }} adopters-showcase-section">
