--- a/layouts/_shortcodes/blocks/ecosystem-stats.html
+++ b/layouts/_shortcodes/blocks/ecosystem-stats.html
@@ -1,4 +1,4 @@
-{{- $color := .Get "color" | default "primary" -}}
+{{ $color := .Get "color" | default "primary" -}}
 
 <div><a id="td-block-ecosystem-stats-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
 <section class="row td-box td-box--{{ $color }} ecosystem-stats-section">
