--- a/layouts/_shortcodes/blocks/hero-split.html
+++ b/layouts/_shortcodes/blocks/hero-split.html
@@ -1,15 +1,22 @@
-{{- $color := .Get "color" | default "primary" -}}
-{{- $image := .Get "image" -}}
-{{- $imageAlt := .Get "imageAlt" | default "OpenTelemetry" -}}
-{{- $title := .Get "title" -}}
-{{- $tagline := .Get "tagline" -}}
+{{ $color := .Get "color" | default "primary" -}}
+{{ $image := .Get "image" -}}
+{{ $imageAlt := .Get "imageAlt" | default "OpenTelemetry" -}}
+{{ $title := .Get "title" -}}
+{{ $tagline := .Get "tagline" -}}
+{{ $useLogo := .Get "useLogo" | default false -}}
 
 <section class="hero-split hero-split--{{ $color }}">
   <div class="container">
     <div class="hero-split__grid">
       <div class="hero-split__content">
-        {{- with $title -}}
-        <p class="hero-split__title">{{ . }}</p>
+        {{- if $useLogo -}}
+        <div class="hero-split__logo">
+          {{ with resources.Get "icons/logo.svg" -}}
+            {{ ( . | minify).Content | safeHTML -}}
+          {{ end -}}
+        </div>
+        {{- else if $title -}}
+        <p class="hero-split__title">{{ $title }}</p>
         {{- end -}}
         {{- with $tagline -}}
         <p class="hero-split__tagline">{{ . }}</p>
