--- a/layouts/_shortcodes/blocks/intro-section.html
+++ b/layouts/_shortcodes/blocks/intro-section.html
@@ -1,4 +1,4 @@
-{{- $color := .Get "color" | default "white" -}}
+{{ $color := .Get "color" | default "white" -}}
 
 <div><a id="td-block-intro-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
 <section class="row td-box td-box--{{ $color }} intro-section">
