--- a/layouts/_shortcodes/blocks/otel-features.html
+++ b/layouts/_shortcodes/blocks/otel-features.html
@@ -1,5 +1,5 @@
-{{- $color := .Get "color" | default "light" -}}
-{{- $columns := .Get "columns" | default "3" -}}
+{{ $color := .Get "color" | default "light" -}}
+{{ $columns := .Get "columns" | default "3" -}}
 
 <div><a id="td-block-otel-features-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
 <section class="row td-box td-box--{{ $color }} otel-features-section">
