--- a/layouts/_markup/render-blockquote-alert.html
+++ b/layouts/_markup/render-blockquote-alert.html
@@ -16,7 +16,7 @@
 -}}
 
 <div class="alert alert-{{ $alertClass }}" role="alert">
-{{ with $title -}}
+{{- with $title -}}
   <div class="h4 alert-heading" role="heading">
     {{- . -}}
   </div>
