--- a/layouts/_shortcodes/blocks/hero-split.html
+++ b/layouts/_shortcodes/blocks/hero-split.html
@@ -8,6 +8,11 @@
 <section class="hero-split hero-split--{{ $color }}"{{ with $image }} style="--hero-bg-image: url('{{ . }}')"{{ end }}>
   <div class="container">
     <div class="hero-split__grid">
+      <div class="hero-split__mobile-logo">
+        {{ with resources.Get "icons/logo.svg" -}}
+          {{ ( . | minify).Content | safeHTML -}}
+        {{ end -}}
+      </div>
       <div class="hero-split__content">
         {{- if $useLogo -}}
         <div class="hero-split__logo">
