Add search bar back

--- a/assets/scss/_landing.scss
+++ b/assets/scss/_landing.scss
@@ -820,6 +820,7 @@
   }
 
   .hero-search-section {
+    background: var(--bs-body-bg) !important;
     border-bottom-color: rgba(255, 255, 255, 0.1);
   }
 
