--- a/assets/scss/_landing.scss
+++ b/assets/scss/_landing.scss
@@ -232,7 +232,7 @@
       padding: 0;
       margin: 0;
       display: flex;
-      gap: 0.75rem;
+      gap: 4px;
       flex-wrap: wrap;
       justify-content: center;
 
