Fix title and update images

--- a/assets/scss/_landing.scss
+++ b/assets/scss/_landing.scss
@@ -1011,6 +1011,10 @@
     border-color: rgba(255, 255, 255, 0.1) !important;
   }
 
+  .signals-showcase__title {
+    color: $white !important;
+  }
+
   .signal-card {
     color: $white;
 
