--- a/assets/scss/_landing.scss
+++ b/assets/scss/_landing.scss
@@ -92,7 +92,7 @@
         display: block;
       }
 
-      svg {
+      .hero-split__logo-img {
         height: 144px;
         width: auto;
 
@@ -115,7 +115,7 @@
         display: none;
       }
 
-      svg {
+      .hero-split__logo-img {
         height: 120px;
         width: auto;
         max-width: 100%;
@@ -159,7 +159,7 @@
         display: block;
       }
 
-      svg {
+      .hero-split__logo-img {
         height: 144px;
         width: auto;
 
@@ -182,7 +182,7 @@
         display: none;
       }
 
-      svg {
+      .hero-split__logo-img {
         height: 120px;
         width: auto;
         max-width: 100%;
